--- a/lecture-notes.cls
+++ b/lecture-notes.cls
@@ -34,7 +34,7 @@
 	BoldItalicFont=*-bolditalic
 ]{texgyreadventor}
 \setmathfont{XITS Math}
-\setmathfont[range=\mathscr,Scale=MatchUppercase]{Tangerine Bold}
+%\setmathfont[range=\mathscr,Scale=MatchUppercase]{Tangerine Bold}
 
 % TikZ
 \RequirePackage{tikz}
