--- a/lecture-notes.cls
+++ b/lecture-notes.cls
@@ -30,6 +30,7 @@
 \RequirePackage{todonotes}
 \RequirePackage{csquotes} % proper quotes
 \RequirePackage{babel}
+\RequirePackage{paralist}
 
 % Fonts
 \RequirePackage{unicode-math}
