--- a/math-ag.sty
+++ b/math-ag.sty
@@ -2,7 +2,8 @@
 \ProvidesPackage{math-ag}[2011/04/04 Useful commands for writing texts about algebraic geometry]
 \RequirePackage{math-ca}
 
-\newcommand\sheaf\mathcal
+\newcommand\sheaf\mathscr
 \renewcommand\O{\sheaf O}
+\newcommand\shHom{\sheaf{Hom}}
 
 \DeclareMathOperator\Spec{Spec}
