--- a/math-general.sty
+++ b/math-general.sty
@@ -2,6 +2,7 @@
 \ProvidesPackage{math-general}[2011/04/04 Useful commands for writing texts about mathematics]
 
 \DeclareMathOperator\rank{rank}
+\DeclareMathOperator\Hom{Hom}
 
 \newcommand\isoto\similarrightarrow % isomorphisms
 
