--- a/math-general.sty
+++ b/math-general.sty
@@ -23,3 +23,8 @@
 
 % vector spaces
 \newcommand\linspan[1]{\left\langle #1 \right\rangle}
+\renewcommand\vec\mathsf
+
+% matrices
+\newcommand\transpose[1]{#1^{\mathrm{T}}}
+\newcommand\GL[2]{\mathrm{GL}_{#1}(#2)}
