--- a/math-ca.sty
+++ b/math-ca.sty
@@ -4,6 +4,8 @@
 
 \newcommand\ideal\mathfrak
 
+\newcommand\cx\bullet               % dot for complexes
 \DeclareMathOperator\Tor{Tor}
 
 \DeclareMathOperator\Pic{Pic}
+
