--- a/math-ca.sty
+++ b/math-ca.sty
@@ -2,10 +2,15 @@
 \ProvidesPackage{math-ca}[2011/04/04 Useful commands for writing texts about commutative algebra]
 \RequirePackage{math-general}
 
+% ideals
 \newcommand\ideal\mathfrak
+\DeclareMathOperator\Spec{Spec}
 
+% homological algebra
 \newcommand\cx\bullet               % dot for complexes
 \DeclareMathOperator\Tor{Tor}
 
 \DeclareMathOperator\Pic{Pic}
 
+% dimension theory
+\DeclareMathOperator\gldim{gldim}   % global dimension
