--- a/math-general.sty
+++ b/math-general.sty
@@ -7,7 +7,6 @@
 
 % often used operators
 \DeclareMathOperator\rank{rank}
-\DeclareMathOperator\Hom{Hom}       
 \DeclareMathOperator\supp{supp}     % support
 
 \newcommand\abs[1]{\left|#1\right|} % absolute value
@@ -15,6 +14,12 @@
 % arrows
 \newcommand\onto\twoheadrightarrow  % surjections
 \newcommand\isoto\similarrightarrow % isomorphisms
+
+% morphisms
+\DeclareMathOperator\Hom{Hom}       
+\DeclareMathOperator\Aut{Aut}       
+\DeclareMathOperator\coker{coker}   % cokernel       
+\DeclareMathOperator\im{im}         % image       
 
 % Quotient #1 / #2.
 \newcommand\rquot[2]{%
