--- a/math-general.sty
+++ b/math-general.sty
@@ -8,6 +8,7 @@
 % often used operators
 \DeclareMathOperator\rank{rank}
 \DeclareMathOperator\supp{supp}     % support
+\DeclareMathOperator\sign{sgn}      % sign
 
 \newcommand\abs[1]{\left|#1\right|} % absolute value
 
