--- a/math-general.sty
+++ b/math-general.sty
@@ -25,7 +25,7 @@
 % Quotient #1 / #2.
 \newcommand\rquot[2]{%
     \mathchoice%
-        {\left.#1\middle/\kern-0.3ex\lower0.7ex\hbox{$\displaystyle #2$}\right.}%
+        {\left.#1\kern-0.2ex\middle/\kern-0.3ex\lower0.7ex\hbox{$\displaystyle #2$}\right.}%
         {\left.#1\middle/#2\right.}%
         {\left.#1\middle/#2\right.}%
         {\left.#1\middle/#2\right.}%
