--- a/ck-general-setup.tex
+++ b/ck-general-setup.tex
@@ -1,3 +1,45 @@
+\newif\ifkindledxlandscape
+\newif\ifkindledxportrait
+\newif\ifkindledx
+\newif\ifbw
+
+% -------------------------
+% Process options and set flags
+% -------------------------
+
+\RequirePackage{xstring}
+
+% set options based on jobname
+\IfEndWith{\jobname}{\detokenize{-kindledxlandscape}}{\kindledxlandscapetrue}{}
+\IfEndWith{\jobname}{\detokenize{-kindledxportrait}}{\kindledxportraittrue}{}
+\IfEndWith{\jobname}{\detokenize{-bw}}{\bwtrue}{}
+
+% set options based on class options
+
+\DeclareOption{kindledxlandscape}{
+    \kindledxlandscapetrue
+}
+
+\DeclareOption{kindledxportrait}{
+    \kindledxportraittrue
+}
+
+\DeclareOption{bw}{
+    \bwtrue
+}    
+
+\ProcessOptions\relax
+
+\ifkindledxportrait\kindledxtrue\fi
+\ifkindledxlandscape\kindledxtrue\fi
+\ifkindledx\bwtrue\fi
+
+% -------------------------
+% KOMA options
+% -------------------------
+
+\RequirePackage{scrpage2}
+
 \KOMAoptions{
     fontsize=10pt,
     %DIV=, % basic value for typearea
@@ -21,7 +63,7 @@
 \RequirePackage{csquotes}  % proper quotes
 \RequirePackage{babel}
 \RequirePackage{paralist}
-\RequirePackage{engord}	   % English ordinals
+\RequirePackage{engord}    % English ordinals
 \RequirePackage{needspace} % to avoid pagebreaks at bad places
 \RequirePackage{iftex,dtklogos}
 \RequirePackage{biblatex}
@@ -32,32 +74,42 @@
 \RequirePackage{unicode-math}
 \def\@mainfont{TeX Gyre Termes}
 \setmainfont[
-	Ligatures=TeX,
-	Extension=.otf,
-	UprightFont= *-regular,
-	BoldFont=*-bold,
-	ItalicFont=*-italic,
-	BoldItalicFont=*-bolditalic,
-	Scale=MatchUppercase
+  Ligatures=TeX,
+  Extension=.otf,
+  UprightFont= *-regular,
+  BoldFont=*-bold,
+  ItalicFont=*-italic,
+  BoldItalicFont=*-bolditalic,
+  Scale=MatchUppercase
 ]{texgyretermes}
-\def\@sansfont{Tex Gyre Adventor}
+\def\@sansfont{TeX Gyre Adventor}
 \setsansfont[
-	Ligatures=TeX,
-	Extension=.otf,
-	UprightFont= *-regular,
-	BoldFont=*-bold,
-	ItalicFont=*-italic,
-	BoldItalicFont=*-bolditalic,
-	Scale=MatchUppercase
+  Ligatures=TeX,
+  Extension=.otf,
+  UprightFont= *-regular,
+  BoldFont=*-bold,
+  ItalicFont=*-italic,
+  BoldItalicFont=*-bolditalic,
+  Scale=MatchUppercase
 ]{texgyreadventor}
 \def\@monofont{Liberation Mono}
 \setmonofont[
-	Ligatures=TeX,
-	Scale=MatchLowercase
+  Ligatures=TeX,
+  Scale=MatchLowercase
 ]{Liberation Mono}
 \def\@mathfont{XITS Math}
 \setmathfont{XITS Math}
 %\setmathfont[range=\mathscr,Scale=MatchUppercase]{FreeSerif}
+
+% -------------------------
+% Colors
+% -------------------------
+
+\ifbw
+    \colorlet{sectioningcolor}{black}
+\else
+    \colorlet{sectioningcolor}{cyan!15!blue}
+\fi
 
 % -------------------------
 % TikZ
@@ -66,15 +118,14 @@
 \usetikzlibrary{positioning,calc,arrows,decorations.markings,decorations.pathmorphing,decorations.pathreplacing,matrix}
 \tikzstyle{every picture}+=[>=latex]
 \tikzset{commutative diagram/.style={matrix of math nodes,column sep=2em,row sep=2em,text height=1.5ex, text depth=0.25ex}}
-\tikzset{descr/.style={fill=white,inner sep=2pt}}
-
+\tikzset{descr/.style={fill=white,inner sep=1pt}}
 
 % -------------------------
 % Workaround for XeTeX underbrace bug
 % -------------------------
 \ifxetex
-	\def\underbrace#1{\@ifnextchar_{\tikz@@underbrace{#1}}{\tikz@@underbrace{#1}_{}}}
-	\def\tikz@@underbrace#1_#2{\tikz[baseline=(a.base)] {\node[inner xsep=0,inner ysep=1pt] (a) {\(#1\)}; \draw[thick,decorate,decoration={brace,amplitude=5pt}] (a.south east) -- node[below,inner sep=7pt] {\(\scriptstyle #2\)} (a.south west);}}
+  \def\underbrace#1{\@ifnextchar_{\tikz@@underbrace{#1}}{\tikz@@underbrace{#1}_{}}}
+  \def\tikz@@underbrace#1_#2{\tikz[baseline=(a.base)] {\node[inner xsep=0,inner ysep=1pt] (a) {\(#1\)}; \draw[thick,decorate,decoration={brace,amplitude=5pt}] (a.south east) -- node[below,inner sep=7pt] {\(\scriptstyle #2\)} (a.south west);}}
 \fi
 
 % -------------------------
