--- a/ck-general-setup.tex
+++ b/ck-general-setup.tex
@@ -115,7 +115,7 @@
 % TikZ
 % -------------------------
 \RequirePackage{tikz}
-\usetikzlibrary{positioning,calc,arrows,decorations.markings,decorations.pathmorphing,decorations.pathreplacing,matrix}
+\usetikzlibrary{positioning,calc,arrows,decorations.markings,decorations.pathmorphing,decorations.pathreplacing,matrix,intersections}
 \tikzstyle{every picture}+=[>=latex]
 \tikzset{commutative diagram/.style={matrix of math nodes,column sep=2em,row sep=2em,text height=1.5ex, text depth=0.25ex}}
 \tikzset{descr/.style={fill=white,inner sep=1pt}}
