correct package leading order; remarks in Kindle version

--- a/lecture-notes.cls
+++ b/lecture-notes.cls
@@ -4,13 +4,8 @@
 \LoadClassWithOptions{scrbook}
 
 \def\ck@thmreset{chapter}   % reset theorem counter each chapter
-\input{ck-general-setup.tex}
 
-\KOMAoptions{
-    open=right, % start chapters on a right page
-}
-
-% Index
+% Index (load before hyperref)
 \RequirePackage{makeidx}
 \RequirePackage{index}
 \makeindex
@@ -20,6 +15,13 @@
 \renewcommand\nomname{List of Notation}
 \renewcommand{\pagedeclaration}[1]{\hfill #1}
 \makenomenclature
+
+
+\input{ck-general-setup.tex}
+
+\KOMAoptions{
+    open=right, % start chapters on a right page
+}
 
 % set various font options
 \ifbw
@@ -58,6 +60,7 @@
 
 \ifkindledxportrait
     \RequirePackage[papersize={13.3cm,18.8cm},lmargin=0.2cm,rmargin=0.5cm,bottom=0.2cm,top=0.8cm,headsep=0.3cm,footskip=0cm,twoside=false]{geometry}
+    \renewcommand\remark\footnote
 \fi
 
 % chapter and section in the header
