--- a/math-general.sty
+++ b/math-general.sty
@@ -1,6 +1,11 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{math-general}[2011/04/04 Useful commands for writing texts about mathematics]
 
+% greek letters
+\newunicodechar{ϱ}{ρ}
+\newunicodechar{ϑ}{θ}
+\newunicodechar{ϕ}{φ}
+
 % constants
 \renewcommand\i{\mathfrak i}        % imaginary unit
 \newcommand\e{\mathrm e}
