backmatter pagehead and toc entries

--- a/ck-general-setup.tex
+++ b/ck-general-setup.tex
@@ -68,6 +68,7 @@
 \RequirePackage{iftex,dtklogos}
 \RequirePackage{biblatex}
 \RequirePackage{newunicodechar} % modify unicode mappings
+\RequirePackage{etoolbox}
 
 
 % -------------------------
