indentity function/matrix

--- a/math-general.sty
+++ b/math-general.sty
@@ -22,8 +22,10 @@
 \newcommand\isoto\similarrightarrow % isomorphisms
 
 % morphisms
+\newcommand\id[1][]{\mathrm{Id}_{#1}}   % identity map
 \DeclareMathOperator\Hom{Hom}       
 \DeclareMathOperator\Aut{Aut}       
+\DeclareMathOperator\End{End}       
 \DeclareMathOperator\coker{coker}   % cokernel       
 \DeclareMathOperator\im{im}         % image       
 
@@ -50,6 +52,7 @@
 \renewcommand\vec\mathsf
 
 % matrices
+\newcommand\idm[1][]{\mathrm{Id}_{#1}}    % identity matrix
 \newcommand\transpose[1]{#1^{\mathrm{T}}}
 \newcommand\GL[2]{\ensuremath{\mathrm{GL}_{#1}(#2)}}
 \newcommand\SL[2]{\ensuremath{\mathrm{SL}_{#1}(#2)}}
