use biber as biblatex backend

--- a/ck-general-setup.tex
+++ b/ck-general-setup.tex
@@ -75,7 +75,7 @@
 \RequirePackage{engord}    % English ordinals
 \RequirePackage{needspace} % to avoid pagebreaks at bad places
 \RequirePackage{iftex,dtklogos}
-\RequirePackage{biblatex}
+\RequirePackage[backend=biber]{biblatex}
 \RequirePackage{newunicodechar} % modify unicode mappings
 \RequirePackage{etoolbox}
 
